# ASCIIImageConverter

./: CMakeLists.txt  README.md
convertedImages/: appo-OnePPC.txt  griezmann-OnePPC.txt  leo-FourPPC.txt  leo-OnePPC.txt
src/: Image.cpp  Image.h  ImageToAscii.cpp  ImageToAscii.h  main.cpp
